fix some waring